--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     color:white;
-    background: darkgreen;
+    background: rgba(134, 159, 241, 0.874);
     margin: 0px;
 }
 header{
@@ -8,17 +8,20 @@ header{
         font-family: "Bebas Neue", sans-serif;
         font-weight: 400;
         font-style: normal;
+        
       
-      
-border-bottom: solid 2px   rgb(207, 179, 179);
-padding:20px;
-font-size: 40px;
-color: rgb(90, 152, 196)
+border-bottom: solid 1px   rgb(207, 179, 179);
+padding:1px;
+font-size: 60px;
+color: rgb(255, 255, 255);
+display: flex;
+justify-content: center;
+
 
 }   
 
 section{
-    background: black;
+    background: rgba(0, 0, 0, 0.781);
     padding-bottom: 30px;
     padding-top: 30px;
     padding-left: 30px;
