--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,56 @@
-body{
-    color:white;
-    background: rgba(6, 38, 143, 0.874);
-    margin: 0px;
-    margin-bottom: 100px;
-
-    
-}
 header{
     
-        font-family: "Bebas Neue", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        
-      
-border-bottom: solid 1px   rgb(207, 179, 179);
-padding:1px;
-font-size: 60px;
-color: rgb(255, 255, 255);
-display: flex;
-justify-content: center;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    border-bottom: solid 1px   rgb(207, 179, 179);
+    padding:1px;
+    font-size: 60px;
+    color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: center;
+    background: black;
+}
 
 
-}   
+ .primeiraimpressao
+ {
+    color:rgb(0, 0, 0);
+    background: rgba(40, 54, 51, 0.874);
+    margin: 0px;
+    
+ }
+ .formacao
+ {
+    color:rgb(0, 0, 0);
+    background: rgba(40, 54, 51, 0.874);
+    margin: 0px;
+    margin-bottom: 100px;
+ }
 
-section{
-    background: rgba(0, 0, 0, 0.781);
-    padding-bottom: 10px;
-    padding-top: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-    display:flex;
+
+
+ .bibliografia
+  {
+    width: 33%;
+    font-size: 32px;
+  }
+ .formacao{
+    width: 33%;
+ font-size: 32px;   
+}
+.imgprincipal{
+    width: 33%;
+}
+
+
+section{ 
+    background: rgba(86, 191, 218, 0.781);
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    display:flex; 
     justify-content: center;
 
 }
@@ -66,3 +87,24 @@ opacity: 0.5
     justify-content: center;
     border-bottom: 2px solid gold;
 }
+.imgprincipal{
+    
+
+    img{
+        display: flex;
+    justify-content: left;
+
+    width: 450px;
+    height: 800px;
+    
+    
+    
+    }
+}
+
+
+primeiraimpressao{
+   display: flex;
+   justify-content: center; 
+}
+
