--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ header{
     font-weight: 400;
     font-style: normal;
     border-bottom: solid 1px   rgb(207, 179, 179);
-    padding:1px;
     font-size: 60px;
     color: rgb(255, 255, 255);
     display: flex;
@@ -13,35 +12,63 @@ header{
 }
 
 
- .primeiraimpressao
+ .primeiraimpressao /* seçãozona*/
  {
-    color:rgb(0, 0, 0);
+    color:  rgb(255, 255, 255);
     background: rgba(40, 54, 51, 0.874);
     margin: 0px;
+    text-align: justify;
     
  }
  .formacao
  {
-    color:rgb(0, 0, 0);
+    color:rgb(255, 255, 255);
     background: rgba(40, 54, 51, 0.874);
     margin: 0px;
     margin-bottom: 100px;
- }
+    font-size: 32px;
+    padding-right: 33%;
+    padding-left: 33%;
+}
 
 
 
  .bibliografia
   {
-    width: 33%;
+    
     font-size: 32px;
+    padding-right: 33%;
+    padding-left: 33%;  
   }
  .formacao{
     width: 33%;
  font-size: 32px;   
 }
 .imgprincipal{
-    width: 33%;
+    
+    padding-right: 33%;
+    padding-left: 33%;
+    img{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+      }    
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 section{ 
@@ -50,8 +77,8 @@ section{
     padding-top: 5px;
     padding-left: 5px;
     padding-right: 5px;
-    display:flex; 
-    justify-content: center;
+    /*display:flex; 
+    justify-content: center;*/
 
 }
 .chamada-texto{
@@ -87,20 +114,7 @@ opacity: 0.5
     justify-content: center;
     border-bottom: 2px solid gold;
 }
-.imgprincipal{
-    
 
-    img{
-        display: flex;
-    justify-content: left;
-
-    width: 450px;
-    height: 800px;
-    
-    
-    
-    }
-}
 
 
 primeiraimpressao{
