--- a/styles.css
+++ b/styles.css
@@ -44,13 +44,13 @@ header{
 }
 .imgprincipal{
     
-    padding-right: 33%;
-    padding-left: 33%;
+    padding-right: 20%;
+    padding-left: 20%;
     img{
         display: flex;
         justify-content: center;
         width: 100%;
-        height: 100%;
+        height: auto
       }    
 
 }
